--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
@@ -35,6 +36,7 @@
     "class-validator": "^0.14.0",
     "joi": "^17.7.0",
     "mongoose": "^6.8.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
