--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.14.0",
     "handlebars": "^4.7.7",
     "joi": "^17.7.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.8.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
