--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "joi": "^17.7.0",
     "moment": "^2.29.4",
     "mongoose": "^6.8.1",
+    "nestjs-search": "^4.2.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
