--- a/package.json
+++ b/package.json
@@ -22,24 +22,29 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/axios": "^1.0.1",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^10.0.1",
+    "@nestjs/axios": "^2.0.0",
+    "@nestjs/common": "^9.3.8",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.8",
+    "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.2.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.1.4",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.3.8",
+    "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/aws-sdk": "^2.7.0",
+    "aws-sdk": "^2.1314.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "formidable": "^2.1.1",
+    "generate-safe-id": "^1.0.3",
     "handlebars": "^4.7.7",
     "joi": "^17.7.0",
     "moment": "^2.29.4",
     "mongoose": "^6.8.1",
+    "nestjs-s3": "^1.0.1",
     "nestjs-search": "^4.2.1",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
@@ -55,11 +60,12 @@
     "url": "https://github.com/nestjs/typeorm"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^9.2.0",
+    "@nestjs/schematics": "^9.0.4",
+    "@nestjs/testing": "^9.3.8",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
