--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
     "@types/aws-sdk": "^2.7.0",
+    "@types/nodemailer": "^6.4.7",
     "aws-sdk": "^2.1315.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
