--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nestjs-s3": "^1.0.1",
     "nestjs-search": "^4.2.1",
     "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "qrcode": "^1.5.1",
