--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/nodemailer": "^6.4.7",
     "aws-sdk": "^2.1315.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
