se quita importacion no requerida

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-handlebars": "^7.0.7",
     "formidable": "^2.1.1",
     "generate-safe-id": "^1.0.3",
     "geoip-lite": "^1.4.7",
@@ -58,6 +59,7 @@
     "pdfkit-table": "^0.1.99",
     "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^3.3.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "uuid": "8.3.2"
